Adding enums in 4 request models, updated getRequests endpoint
Signed-off-by: muralibasani <muralidahr.basani@aiven.io>